# step-editor

./: .gitignore  CMakeLists.txt  README.md  sequence-generator.py  sequence.json
inc/: step-editor.h  stubs.h
src/: main.c  step-editor.c  stubs.c
